Opened 12 years ago
Closed 4 years ago
#5422 closed bug (fixed)
[PowerStatus] - Don't draw selection indication for batteries when there is only one.
Reported by: | stargater | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/PowerStatus | Version: | R1/alpha1 |
Keywords: | Cc: | phoudoin, modeenf | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
When i select the text info then rezised (redraw) not the Deskbar systemtrayview, see the screenshot. And by the Battery Info, is a blue color in the Battery icon view, looks not so good.
The other is, can the Battery in Deskbar and Info Window vertical draw, this looks better.
Attachments (1)
Change History (9)
by , 12 years ago
comment:1 by , 12 years ago
comment:2 by , 12 years ago
Summary: | Battery Deskbar App → [PowerStatus] - Don't draw selection indication for batteries when there is only one. |
---|
Hi stargater,
it's better when you open one ticket per issue. Which shows that you need to come up with better titles for the ticket. "Battery Deskbar App" is a bad ticket title, since it says nothing about what the ticket contains.
The issue you mention in the description is actually the selection indication for the battery. Some laptops, like my Lenovo T60 come with more than one battery bay. So this ticket could be about omitting the selection indication when there is only one battery.
comment:3 by , 12 years ago
Should we open another ticket about PowerStatus replicant text overlapping.
comment:4 by , 12 years ago
Cc: | added |
---|
comment:5 by , 11 years ago
Cc: | added |
---|
comment:6 by , 11 years ago
diver : ticket #6914 now covers that part :) So this ticket only covers what the title says.
comment:7 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:8 by , 4 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev51577. It converts PowerStatus to BTabView.
Although it doesn't directly address the issue of drawing selection when one battery is present, it doesn't look so ugly anymore.
f I hit the icons with the mouse, appears popupmenu but once I release the mouse button will leave the menu again.