PowerStatus: convert to BTabView.

* Move text inside battery if possible.
* Fix location of the spark.
* Fixes #5422 and #7330.