src/apps/powerstatus/ExtendedInfoWindow.cpp
@@ -10,10 +10,15 @@
 
 #include "ExtendedInfoWindow.h"
 
-#include <Box.h>
+#include <ControlLook.h>
 #include <Catalog.h>
 #include <GroupView.h>
+#include <LayoutBuilder.h>
 #include <SpaceLayoutItem.h>
+#include <TabView.h>
+
+
+#include <algorithm>
 
 
 #undef B_TRANSLATION_CONTEXT
@@ -32,7 +37,10 @@ BatteryInfoView::BatteryInfoView()
 {
 	SetViewUIColor(B_PANEL_BACKGROUND_COLOR);
 
-	SetLayout(new BGroupLayout(B_VERTICAL, B_USE_ITEM_SPACING));
+	BGroupLayout* layout = new BGroupLayout(B_VERTICAL, 0);
+	layout->SetInsets(B_USE_DEFAULT_SPACING, B_USE_DEFAULT_SPACING,
+		0, B_USE_DEFAULT_SPACING);
+	SetLayout(layout);
 
 	for (size_t i = 0; i < kLinesCount; i++) {
 		BStringView* view = new BStringView("info", "");
@@ -188,41 +196,104 @@ BatteryInfoView::_GetTextForLine(size_t line)
 //	#pragma mark -
 
 
+BatteryTab::BatteryTab(BatteryInfoView* target,
+		ExtPowerStatusView* view)
+	:
+	fBatteryView(view)
+{
+}
+
+
+BatteryTab::~BatteryTab()
+{
+}
+
+
+void
+BatteryTab::Select(BView* owner)
+{
+	BTab::Select(owner);
+	fBatteryView->Select();
+}
+
+void
+BatteryTab::DrawFocusMark(BView* owner, BRect frame)
+{
+	float vertOffset = IsSelected() ? 3 : 2;
+	float horzOffset = IsSelected() ? 2 : 4;
+	float width = frame.Width() - horzOffset * 2;
+	BPoint pt1((frame.left + frame.right - width) / 2.0 + horzOffset,
+		frame.bottom - vertOffset);
+	BPoint pt2((frame.left + frame.right + width) / 2.0,
+		frame.bottom - vertOffset);
+	owner->SetHighUIColor(B_KEYBOARD_NAVIGATION_COLOR);
+	owner->StrokeLine(pt1, pt2);
+}
+
+
+void
+BatteryTab::DrawLabel(BView* owner, BRect frame)
+{
+	BRect rect = frame;
+	float size = std::min(rect.Width(), rect.Height());
+	rect.right = rect.left + size;
+	rect.bottom = rect.top + size;
+	if (frame.Width() > rect.Height()) {
+		rect.OffsetBy((frame.Width() - size) / 2.0f, 0.0f);
+	} else {
+		rect.OffsetBy(0.0f, (frame.Height() - size) / 2.0f);
+	}
+	fBatteryView->DrawTo(owner, rect);
+}
+
+
+BatteryTabView::BatteryTabView(const char* name)
+	:
+	BTabView(name)
+{
+}
+
+
+BatteryTabView::~BatteryTabView()
+{
+}
+
+
+BRect
+BatteryTabView::TabFrame(int32 index) const
+{
+	BRect bounds(Bounds());
+	float width = TabHeight();
+	float height = TabHeight();
+	float offset = BControlLook::ComposeSpacing(B_USE_WINDOW_SPACING);
+	switch (TabSide()) {
+		case kTopSide:
+			return BRect(offset + index * width, 0.0f,
+				offset + index * width + width, height);
+		case kBottomSide:
+			return BRect(offset + index * width, bounds.bottom - height,
+				offset + index * width + width, bounds.bottom);
+		case kLeftSide:
+			return BRect(0.0f, offset + index * width, height,
+				offset + index * width + width);
+		case kRightSide:
+			return BRect(bounds.right - height, offset + index * width,
+				bounds.right, offset + index * width + width);
+		default:
+			return BRect();
+	}
+}
+
+
 ExtPowerStatusView::ExtPowerStatusView(PowerStatusDriverInterface* interface,
 		BRect frame, int32 resizingMode, int batteryID,
-		ExtendedInfoWindow* window)
+		BatteryInfoView* batteryInfoView, ExtendedInfoWindow* window)
 	:
 	PowerStatusView(interface, frame, resizingMode, batteryID),
 	fExtendedInfoWindow(window),
-	fBatteryInfoView(window->GetExtendedBatteryInfoView()),
-	fSelected(false)
+	fBatteryInfoView(batteryInfoView),
+	fBatteryTabView(window->GetBatteryTabView())
 {
-}
-
-
-void
-ExtPowerStatusView::Draw(BRect updateRect)
-{
-	if (fSelected) {
-		rgb_color lowColor = LowColor();
-		SetLowColor(102, 152, 203);
-		FillRect(updateRect, B_SOLID_LOW);
-		SetLowColor(lowColor);
-	}
-	PowerStatusView::Draw(updateRect);
-}
-
-
-void
-ExtPowerStatusView::MouseDown(BPoint where)
-{
-	if (!fSelected) {
-		fSelected = true;
-		Update(true);
-		if (ExtendedInfoWindow* window
-				= dynamic_cast<ExtendedInfoWindow*>(Window()))
-			window->BatterySelected(this);
-	}
 }
 
 
@@ -253,6 +324,8 @@ ExtPowerStatusView::Update(bool force)
 
 	fBatteryInfoView->Update(fBatteryInfo, extInfo);
 	fBatteryInfoView->Invalidate();
+
+	fBatteryTabView->Invalidate();
 }
 
 
@@ -270,56 +343,36 @@ ExtendedInfoWindow::ExtendedInfoWindow(PowerStatusDriverInterface* interface)
 {
 	fDriverInterface->AcquireReference();
 
-	BView *view = new BView(Bounds(), "view", B_FOLLOW_ALL, 0);
-	view->SetViewUIColor(B_PANEL_BACKGROUND_COLOR);
-	AddChild(view);
+	fBatteryTabView = new BatteryTabView("tabview");
+	fBatteryTabView->SetBorder(B_NO_BORDER);
+	fBatteryTabView->SetTabHeight(70.0f);
+	fBatteryTabView->SetTabSide(BTabView::kLeftSide);
+	BLayoutBuilder::Group<>(this, B_VERTICAL, 0)
+		.SetInsets(B_USE_DEFAULT_SPACING, 0, B_USE_DEFAULT_SPACING, 0)
+		.Add(fBatteryTabView);
 
-	BGroupLayout* mainLayout = new BGroupLayout(B_VERTICAL);
-	mainLayout->SetSpacing(10);
-	mainLayout->SetInsets(10, 10, 10, 10);
-	view->SetLayout(mainLayout);
-
-	BRect rect = Bounds();
-	rect.InsetBy(5, 5);
-	BBox *infoBox = new BBox(rect, B_TRANSLATE("Power status box"));
-	infoBox->SetLabel(B_TRANSLATE("Battery info"));
-	BGroupLayout* infoLayout = new BGroupLayout(B_HORIZONTAL);
-	infoLayout->SetInsets(10, infoBox->TopBorderOffset() * 2 + 10, 10, 10);
-	infoLayout->SetSpacing(10);
-	infoBox->SetLayout(infoLayout);
-	mainLayout->AddView(infoBox);
-
-	BGroupView* batteryView = new BGroupView(B_VERTICAL);
-	batteryView->GroupLayout()->SetSpacing(10);
-	infoLayout->AddView(batteryView);
-
-	// create before the battery views
-	fBatteryInfoView = new BatteryInfoView();
-
-	BGroupLayout* batteryLayout = batteryView->GroupLayout();
 	BRect batteryRect(0, 0, 50, 30);
 	for (int i = 0; i < interface->GetBatteryCount(); i++) {
+		BatteryInfoView* batteryInfoView = new BatteryInfoView();
 		ExtPowerStatusView* view = new ExtPowerStatusView(interface,
-			batteryRect, B_FOLLOW_NONE, i, this);
-		view->SetExplicitMaxSize(BSize(70, 80));
-		view->SetExplicitMinSize(BSize(70, 80));
+			batteryRect, B_FOLLOW_NONE, i, batteryInfoView, this);
+		BatteryTab* tab = new BatteryTab(batteryInfoView, view);
+		fBatteryTabView->AddTab(batteryInfoView, tab);
+		// Has to be added, otherwise it won't get info updates
+		view->Hide();
+		AddChild(view);
 
-		batteryLayout->AddView(view);
 		fBatteryViewList.AddItem(view);
 		fDriverInterface->StartWatching(view);
 		if (!view->IsCritical())
 			fSelectedView = view;
 	}
 
-	batteryLayout->AddItem(BSpaceLayoutItem::CreateGlue());
-
-	infoLayout->AddView(fBatteryInfoView);
-
 	if (!fSelectedView && fBatteryViewList.CountItems() > 0)
 		fSelectedView = fBatteryViewList.ItemAt(0);
 	fSelectedView->Select();
 
-	BSize size = mainLayout->PreferredSize();
+	BSize size = GetLayout()->PreferredSize();
 	ResizeTo(size.width, size.height);
 }
 
@@ -333,20 +386,8 @@ ExtendedInfoWindow::~ExtendedInfoWindow()
 }
 
 
-BatteryInfoView*
-ExtendedInfoWindow::GetExtendedBatteryInfoView()
+BatteryTabView*
+ExtendedInfoWindow::GetBatteryTabView()
 {
-	return fBatteryInfoView;
-}
-
-
-void
-ExtendedInfoWindow::BatterySelected(ExtPowerStatusView* view)
-{
-	if (fSelectedView) {
-		fSelectedView->Select(false);
-		fSelectedView->Invalidate();
-	}
-
-	fSelectedView = view;
+	return fBatteryTabView;
 }
